--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,30 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!-- @extend:base title="Mnengwa Studios" description="Lorem ipsum" -->
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mnengwa Studios - Home</title>
+<header>
+    <img src="@images/brand/logo-black.svg" />
+</header>
 
-    <link rel="shortcut icon" href="../static/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="../static/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="96x96" href="../static/favicon-96x96.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Mnengwa" />
+<main>Home</main>
 
-    <link rel="manifest" href="../static/site.webmanifest" />
-</head>
+<section></section>
 
-<body>
-    <header>
-        <img src="@images/brand/logo-black.svg" />
-    </header>
-
-    <main></main>
-
-    <section></section>
-
-    <footer></footer>
-</body>
-
-</html>
+<footer></footer>
