--- a/src/html/works.html
+++ b/src/html/works.html
@@ -1,19 +1,11 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mnengwa Studios - Works</title>
+<!-- @extend:base title="Works" description="Lorem ipsum" -->
 
-        <link rel="shortcut icon" href="../static/favicon.ico" />
-        <link rel="icon" type="image/svg+xml" href="../static/favicon.svg" />
-        <link rel="icon" type="image/png" sizes="96x96" href="../static/favicon-96x96.png" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="Mnengwa" />
+<header>
+    <img src="@images/brand/logo-black.svg" />
+</header>
 
-        <link rel="manifest" href="../static/site.webmanifest" />
-        <link rel="stylesheet" href="./css/main.css" />
-    </head>
+<main>Works</main>
 
-    <body></body>
-</html>
+<section></section>
+
+<footer></footer>
