--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,13 @@
 <!-- @extend:base title="Mnengwa Studios" description="Lorem ipsum" -->
 
-<header>
-    <img src="@images/brand/logo-black.svg" />
+<header id="_header">
+    <img id="_header-logo" src="@images/brand/logo-black.svg" />
+
+    <nav id="_header-menu">
+        <a href="/">Home</a>
+        <a href="/works">Works</a>
+        <a href="/about">About</a>
+    </nav>
 </header>
 
 <main>Home</main>
