--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,11 @@
 <!-- @extend:base title="Mnengwa Studios" description="Lorem ipsum" -->
 
-<main>Home</main>
+<main>
+    <div id="landing">
+        <img class="darker" data-render="vector" src="@images/brand/name-black.svg" alt="Mnengwa Studios" />
+        <img class="lighter" data-render="vector" src="@images/brand/name-white.svg" alt="Mnengwa Studios" />
+    </div>
+</main>
 
 <section></section>
 
