chore: Add alt attribute for decorative icon img tags

--- a/src/html/_.html
+++ b/src/html/_.html
@@ -42,22 +42,22 @@
         <nav id="_header-menu">
             <a href="/">
                 Home
-                <img class="icon" data-render="vector" src="@images/icons/house.svg" />
+                <img class="icon" data-render="vector" alt="🏠" src="@images/icons/house.svg" />
             </a>
             <a href="/works">
                 Works
-                <img class="icon" data-render="vector" src="@images/icons/drafting-compass.svg" />
+                <img class="icon" data-render="vector" alt="🗂️" src="@images/icons/drafting-compass.svg" />
             </a>
             <a href="/about">
                 About
-                <img class="icon" data-render="vector" src="@images/icons/briefcase-business.svg" />
+                <img class="icon" data-render="vector" alt="💼" src="@images/icons/briefcase-business.svg" />
             </a>
         </nav>
 
         <div id="_header_extra">
             <button id="_theme-toggle" onclick="toggleTheme()">
-                <img class="darker icon" data-render="vector" src="@images/icons/moon.svg" />
-                <img class="lighter icon" data-render="vector" src="@images/icons/sun.svg" />
+                <img class="darker icon" data-render="vector" alt="🌙" src="@images/icons/moon.svg" />
+                <img class="lighter icon" data-render="vector" alt="☀️" src="@images/icons/sun.svg" />
             </button>
         </div>
     </header>
