feature: Add some umph to the landing

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,11 +2,82 @@
 
 <main>
     <div id="landing">
-        <img class="darker" data-render="vector" src="@images/brand/name-black.svg" alt="Mnengwa Studios" />
-        <img class="lighter" data-render="vector" src="@images/brand/name-white.svg" alt="Mnengwa Studios" />
+        <div id="shout-out">
+            <img class="darker shout-out-item" data-render="vector" src="@images/brand/name-black.svg"
+                alt="Mnengwa Studios" />
+            <img class="lighter shout-out-item" data-render="vector" src="@images/brand/name-white.svg"
+                alt="Mnengwa Studios" />
+        </div>
     </div>
 </main>
 
-<section></section>
+<section>
+    <details>
+        <summary>
+            What kind of applications to deal with?
+        </summary>
 
-<footer></footer>
+        <p>
+            From the works we've done, web APIs, web platforms & mobile apps in general. What's your crazy idea?
+        </p>
+    </details>
+
+    <details>
+        <summary>
+            How much do you charge for... How long does it take to ...
+        </summary>
+
+        <p>
+            Let me stop you right there! Budgets & timelines are important, and so are questions that are grounded in
+            the proper context. We can have a sober discussion after we talk about the genius idea you have. Promise.
+        </p>
+    </details>
+
+    <details>
+        <summary>
+            Are there out of the box, plug and play, ready to enterprise ... solutions?
+        </summary>
+
+        <p>
+            Yes. Yes . Yes! Check them out here
+        </p>
+    </details>
+
+    <details>
+        <summary>
+            Does the team use AI?
+        </summary>
+
+        <p>
+            YES - (prototyping, mindless/menial content). <br>
+            NO - vibe coding. Call it skeptism, paranioa, etc
+
+            We'd rather enjoy the process & go through the motions. We sleep better that way.
+        </p>
+    </details>
+
+    <details>
+        <summary>
+            Do we support free & open source initiative?
+        </summary>
+
+        <p>
+            Yes. Yes . Yes! Check them out here
+        </p>
+    </details>
+
+    <details>
+        <summary>
+            Last question, why all the puns? Are we even serious?
+        </summary>
+
+        <p>
+            Why not? Sorry, but it will happen again, and again, and again. <br>
+            DISCLAIMER: ALL PUNS ARE INTENDED.
+        </p>
+    </details>
+</section>
+
+<footer>
+
+</footer>
