--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,11 +2,10 @@
 
 <main>
     <div id="landing">
-        <div id="shout-out">
-            <img class="darker shout-out-item" data-render="vector" src="@images/brand/name-black.svg"
-                alt="Mnengwa Studios" />
-            <img class="lighter shout-out-item" data-render="vector" src="@images/brand/name-white.svg"
-                alt="Mnengwa Studios" />
+        <div class="dot-matrix"></div>
+        <div id="brand-name">
+            <img class="darker" data-render="vector" src="@images/brand/name-black.svg" alt="Mnengwa Studios" />
+            <img class="lighter" data-render="vector" src="@images/brand/name-white.svg" alt="Mnengwa Studios" />
         </div>
     </div>
 </main>
