--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,11 @@
 
 <main>
     <div id="landing">
-        <div class="dot-matrix"></div>
+        <div class="dot-matrix">
+        </div>
+        <div id="dot-matrix-space">
+            <span id="dot-matrix-particle"></span>
+        </div>
         <div id="brand-name">
             <img class="darker" data-render="vector" src="@images/brand/name-black.svg" alt="Mnengwa Studios" />
             <img class="lighter" data-render="vector" src="@images/brand/name-white.svg" alt="Mnengwa Studios" />
